<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="com.colormindapps.rest_reminder_alarm.wear.WearMainActivity" tools:deviceIds="wear">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/transparent_layer"
        android:id="@+id/transparentImageView"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_box="all">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_above="@+id/timer_layout"
            android:orientation="vertical"
            android:layout_marginBottom="7dp"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center"
                style="@style/TitleFontWear" />

            <TextView
                android:id="@+id/description"
                style="@style/NormalFontWear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center_vertical|center" />
        </LinearLayout>

        <RelativeLayout
            android:id="@id/timer_layout"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/btn_timer_np"
            android:clickable="true"
            android:focusable="true"
            android:onClick="startReminder"
            android:layout_height="75dp"
            android:layout_width="155dp">

            <TextView
                android:id="@+id/timer_hour1"
                style="@style/TimerFontWear" />

            <TextView
                android:id="@+id/timer_hour2"
                style="@style/TimerFontWear"
                android:layout_toEndOf="@id/timer_hour1" />

            <TextView
                android:id="@+id/timer_colon"
                android:layout_height="wrap_content"
                android:layout_width="5dp"
                android:layout_marginTop="-1dp"
                android:textSize="25sp"
                android:layout_toEndOf="@id/timer_hour2"
                android:text="@string/timer_layout_colon_string"/>

            <TextView
                android:id="@+id/timer_minute1"
                android:layout_toEndOf="@id/timer_colon"
                style="@style/TimerFontWear" />

            <TextView
                android:id="@+id/timer_minute2"
                android:layout_toEndOf="@id/timer_minute1"
                style="@style/TimerFontWear" />

            <TextView
                android:id="@+id/timer_point"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:textSize="25sp"
                android:layout_toEndOf="@id/timer_minute2"
                android:text="@string/timer_layout_point_string" />

            <TextView
                android:id="@+id/timer_second1"
                android:layout_toEndOf="@id/timer_point"
                style="@style/TimerFontWear" />
            <TextView
                android:id="@+id/timer_second2"
                android:layout_toEndOf="@id/timer_second1"
                style="@style/TimerFontWear" />

        </RelativeLayout>

        <Button
            android:id="@+id/open_commands"
            style="@style/NormalFontWear"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_wear_commands_down"
            android:gravity="center"
            android:onClick="openCommands"
            android:textAlignment="center" />

    </RelativeLayout>


</RelativeLayout>
